classDiagram
  %% Legend
  %% --|> : Inheritance (extends)
  %% ..|> : Implementation (implements)
  %% --* : Composition (has/contains)
  %% -- : Association

  class ApplicationStatus {
    <<enumeration>>
    <<type>>
    'accepted offer' | 'applied' | 'declined offer' | 'given offer' | 'interviewing' | 'no offer' | 'rejected' | 'unsubmitted'
  }

  class CompanyCategory {
    <<enumeration>>
    <<type>>
    'ai' | 'climate' | 'consulting' | 'consumer-tech' | 'cybersecurity' | 'e-commerce' | 'education' | 'energy' | 'enterprise-software' | 'finance' | 'gaming' | 'government' | 'health' | 'hospitality' | 'media-entertainment' | 'nonprofit' | 'other' | 'restaurant' | 'retail'
  }

  class JobSource {
    <<enumeration>>
    <<type>>
    'colleague' | 'company-website' | 'friend' | 'indeed' | 'linkedin' | 'other' | 'recruiter'
  }

  class InterviewStage {
    <<interface>>
    +id: string
    +name: string
    +order: number
    +isCompleted: boolean
    +completedDate: string or null
    +notes: string or null
    +performanceRating: number or null
  }

  class Application {
    <<interface>>
    +id: string
    +companyName: string
    +positionTitle: string
    +dateApplied: string or null
    +status: ApplicationStatus
    +createdAt: string
    +updatedAt: string
    +companyUrl: string or null
    +jobPostingUrl: string or null
    +companyCareerUrl: string or null
    +companyCategory: ComplexUnion
    +skillsMatch: number or null
    +jobSource: ComplexUnion
    +coverLetterRequired: boolean or null
    +specialRequirements: string or null
    +salaryMin: number or null
    +salaryMax: number or null
    +notes: string or null
    +offerDueDate: string or null
    +isArchived: boolean
    +interviewStages: InterviewStageArray~~
  }

  class CreateApplicationInput {
    <<interface>>
    +companyName: string
    +positionTitle: string
    -dateApplied?: string or null
    -companyUrl?: string
    -jobPostingUrl?: string
    -companyCareerUrl?: string
    -companyCategory?: CompanyCategory
    -skillsMatch?: number
    -jobSource?: JobSource
    -coverLetterRequired?: boolean
    -specialRequirements?: string
    -salaryMin?: number
    -salaryMax?: number
    -notes?: string
  }

  class UpdateApplicationInput {
    <<interface>>
    -companyName?: string
    -positionTitle?: string
    -dateApplied?: string or null
    -status?: ApplicationStatus
    -companyUrl?: string or null
    -jobPostingUrl?: string or null
    -companyCareerUrl?: string or null
    -companyCategory?: ComplexUnion
    -skillsMatch?: number or null
    -jobSource?: ComplexUnion
    -coverLetterRequired?: boolean or null
    -specialRequirements?: string or null
    -salaryMin?: number or null
    -salaryMax?: number or null
    -notes?: string or null
    -offerDueDate?: string or null
  }

  class CreateInterviewStageInput {
    <<interface>>
    -id?: string
    +name: string
    +order: number
    -isCompleted?: boolean
    -completedDate?: string
    -notes?: string
    -performanceRating?: number
  }

  class UpdateInterviewStageInput {
    <<interface>>
    -name?: string
    -order?: number
    -isCompleted?: boolean
    -completedDate?: string or null
    -notes?: string or null
    -performanceRating?: number or null
  }

  class PaginatedResponse {
    <<interface>>
    +items: TArray~~
    +page: number
    +limit: number
    +total: number
  }

  class FilterState {
    <<interface>>
    -status?: string
    -companyCategory?: CompanyCategory
    -jobSource?: JobSource
    -skillsMatchMin?: number
    +includeArchived: boolean
    +sortBy: 'dateApplied' or 'companyName' or 'updatedAt'
    +sortDir: 'asc' or 'desc'
    +page: number
    +limit: number
  }

  class ImmerPatch {
    <<interface>>
    +op: 'replace' or 'add' or 'remove'
    +path: (string or number)Array~~
    -value?: unknown
  }

  class FieldChange {
    <<interface>>
    +field: string
    +label: string
    +oldValue: unknown
    +newValue: unknown
  }

  class ApplicationEvent {
    <<interface>>
    +id: string
    +applicationId: string
    +sequence: number
    +description: string
    +changes: FieldChangeArray~~
    +patches: ImmerPatchArray~~
    +inversePatches: ImmerPatchArray~~
    +createdAt: string
  }

  class ApplicationSnapshot {
    <<interface>>
    +id: string
    +applicationId: string
    +atSequence: number
    +state: Application
    +createdAt: string
  }

  Application --* ApplicationStatus : status
  Application --* InterviewStage : interviewStages
  CreateApplicationInput --* CompanyCategory : companyCategory
  CreateApplicationInput --* JobSource : jobSource
  UpdateApplicationInput --* ApplicationStatus : status
  FilterState --* CompanyCategory : companyCategory
  FilterState --* JobSource : jobSource
  ApplicationEvent --* FieldChange : changes
  ApplicationEvent --* ImmerPatch : patches
  ApplicationEvent --* ImmerPatch : inversePatches
  ApplicationSnapshot --* Application : state
